tests/base/invalid/ListConversion_CompileFail_1.whiley


void f([real] ls):
    sys.out.println(Any.toString(ls))

void ::main(System.Console sys):
    f([1,2,3,[]])
